# mandelbrot-rust

./: .gitignore  Cargo.toml  build.rs
gpu/: Cargo.toml
gpu/src/: lib.rs
src/: MandelbrotSet.java  lib.rs  main.rs
