[workspace]
members = [".", "./gpu"]

[package]
name = "mandelbrot_set"
version = "0.1.0"
authors = ["Nilstrieb <nilstrieb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cust = "0.2.2"
image = "0.23.14"

[profile.dev]
opt-level = 3


[build-dependencies]
cuda_builder = "0.2.0"
